[package]
name = "kamu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ring = "0.17.4"
log4rs = "1.2"
sha256 = "1.5"
rocket = { version = "0.5.0", features = ["secrets", "json"] }
serde = "1.0.195"
serde_json = "1.0"

tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

bytes = "1.5.0"

uuid = { version = "1.7",features =["v4","fast-rng","macro-diagnostics","v7"]}

regex = "1.10"
tar = "0.4"
flate2 = "1.0"